2015-10-12  Simon J. Gerraty  <sjg@bad.crufty.net>

	* var.c: the conditional expressions used with ':?' can be
	expensive, if already discarding do not evaluate or expand
	anything. 

2015-10-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (MAKE_VERSION): 20151010
	  Merge with NetBSD make, pick up
	  o Add Boolean wantit flag to Var_Subst and Var_Parse
	    when FALSE we know we are discarding the result and can
	    skip operations like Cmd_Exec.

2015-10-09  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (MAKE_VERSION): 20151009
	  Merge with NetBSD make, pick up
	  o var.c: don't check for NULL before free()
	  o meta.c: meta_oodate, do not hard code ignore of makeDependfile

2015-09-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (MAKE_VERSION): 20150910
	  Merge with NetBSD make, pick up
	  o main.c: with -w print Enter/Leaving messages for objdir too
	    if necessary.
	  o centralize shell metachar handling
	
	* FILES: add metachar.[ch]

2015-06-06  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (MAKE_VERSION): 20150606
	  Merge with NetBSD make, pick up
	  o make.1: document .OBJDIR target

2015-05-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (MAKE_VERSION): 20150505
	  Merge with NetBSD make, pick up
	  o cond.c: be strict about lhs of comparison when evaluating .if
	    but less so when called from variable expansion.
	  o unit-tests/cond2.mk: test various error conditions

2015-05-04  Simon J. Gerraty  <sjg@bad.crufty.net>

	* machine.sh (MACHINE): Add Bitrig 
	  patch from joerg@netbsd.org

2015-04-18  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (MAKE_VERSION): 20150418
	  Merge with NetBSD make, pick up
	  o job.c: use memmove() rather than memcpy()

	* unit-tests/varshell.mk: SunOS cannot handle the TERMINATED_BY_SIGNAL
	  case, so skip it.

2015-04-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (MAKE_VERSION): 20150411
	  bump version - only mk/ changes.
	