@@ -55,7 +55,7 @@
 #       Simon J. Gerraty <sjg@crufty.net>
 
 # RCSid:
-#	$Id: install-mk,v 1.114 2015/10/14 19:59:18 sjg Exp $
+#	$Id: install-mk,v 1.115 2015/10/20 22:04:53 sjg Exp $
 #
 #	@(#) Copyright (c) 1994 Simon J. Gerraty
 #
@@ -70,7 +70,7 @@
 #	sjg@crufty.net
 #
 
-MK_VERSION=20151010
+MK_VERSION=20151020
 OWNER=
 GROUP=
 MODE=444
