@@ -1,3 +1,9 @@
+2015-10-20  Simon J. Gerraty  <sjg@bad.crufty.net>
+
+	* Makefile (MAKE_VERSION): 20151020
+	  Merge with NetBSD make, pick up
+	  o var.c: fix uninitialized var 
+
 2015-10-12  Simon J. Gerraty  <sjg@bad.crufty.net>
 
 	* var.c: the conditional expressions used with ':?' can be
